--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Exported Game/Windows/Gravity Changer.exe"
+export_path="Exported Game/windows/AstroRaider.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -18,7 +18,7 @@ encrypt_directory=false
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=false
 texture_format/bptc=true
 texture_format/s3tc=true
@@ -71,7 +71,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Exported Game/AstroRaider.x86_64"
+export_path="Exported Game/Linux/AstroRaider.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -81,7 +81,7 @@ encrypt_directory=false
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=false
 texture_format/bptc=true
 texture_format/s3tc=true
