--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -25,19 +25,19 @@ binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
 binary_format/architecture="x86_32"
-codesign/enable=true
+codesign/enable=false
 codesign/timestamp=true
 codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon="res://Images/logo.ico"
+application/icon=""
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name="Samy"
+application/company_name=""
 application/product_name=""
 application/file_description=""
 application/copyright=""
