--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Exported Game/windows/AstroRaider.exe"
+export_path="../AstroRaider.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -78,7 +78,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Exported Game/Linux/AstroRaider.x86_64"
+export_path="Exports/AstroRaider.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
