--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../AstroRaider.exe"
+export_path="../../Exported Games/AstroRaider.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -39,8 +39,8 @@ application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name="Samy Abuaisheh"
-application/product_name=""
+application/company_name="Samy"
+application/product_name="Astro Raider"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
