--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -26,6 +26,7 @@ debug/export_console_wrapper=2
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
+shader_baker/enabled=false
 binary_format/architecture="x86_32"
 codesign/enable=false
 codesign/timestamp=true
@@ -97,6 +98,7 @@ debug/export_console_wrapper=1
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
+shader_baker/enabled=false
 binary_format/architecture="x86_64"
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
