--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,11 +3,12 @@
 name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
-export_filter="all_resources"
-include_filter=""
+export_filter="exclude"
+export_files=PackedStringArray()
+include_filter="res://Levels/**"
 exclude_filter=""
 export_path="../../Exported Games/AstroRaider.exe"
 patches=PackedStringArray()
